gerador_roteiros/tests/testfiles/0.9.0/generatorvalidation/invalid/mapa_versao_sem_suporte_gerador.mm
<map version="0.9.1">
<!-- To view this file, download free mind mapping software FreeMind from http://freemind.sourceforge.net -->
<node CREATED="1346675963754" ID="ID_1931000998" MODIFIED="1346675971179" TEXT="MM">
<node CREATED="1346675971851" ID="ID_1932889425" MODIFIED="1346675984078" POSITION="right" TEXT="UC: UC1&#xa;Requisitos: REQ001&#xa;Pr&#xe9;-condi&#xe7;&#xf5;es: PRE1&#xa;P&#xf3;s-condi&#xe7;&#xf5;es: POS1">
<node CREATED="1346675984682" ID="ID_1817897287" MODIFIED="1346676021792" TEXT="Sequ&#xea;ncia: 1&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: PASSO 1"/>
</node>
</node>
</map>
